# JankChess

./: .gitignore  CMakeLists.txt
include/JankChess/: bb.hpp  board.hpp  masks.hpp  move.hpp  move_gen.hpp  types.hpp  zobrist.hpp
src/: bb.cpp  board.cpp  masks.cpp  move.cpp  move_gen.cpp  zobrist.cpp
tests/: CMakeLists.txt  board.cpp  masks.cpp  move.cpp  move_gen.cpp  perft.cpp  zobrist.cpp
